Added media queries for responsive design.
Unclear if it works. Testing on Chrome's developer tools is janky.

--- a/public/views/top-module.ejs
+++ b/public/views/top-module.ejs
@@ -22,26 +22,23 @@
   </div>
   <div id="chord-module">
     <div class="row" id="scale-degree-row">
-      <div class="col-5 chord-module-title">Scale Degree:</div>
-      <div class="col-5" id="scale-degree">1</div>
-      <div class="col-2"></div>
+      <div class="col-6 chord-module-title">Scale Degree:</div>
+      <div class="col-6 chord-module-content" id="scale-degree">1</div>
     </div>
     <div class="row" id="seventh-chord-row">
-      <div class="col-5 chord-module-title">7th Chord:</div>
-      <div class="col-5" id="seventh-chord">Maj7</div>
-      <div class="col-2"></div>
+      <div class="col-6 chord-module-title">7th Chord:</div>
+      <div class="col-6 chord-module-content" id="seventh-chord">Maj7</div>
     </div>
     <div class="row" id="chordscale-row">
-      <div class="col-5 chord-module-title">Chord Scale:</div>
-      <div class="col-5" id="chordscale">Ionian</div>
-      <div class="col-2"></div>
+      <div class="col-6 chord-module-title">Chord Scale:</div>
+      <div class="col-6 chord-module-content" id="chordscale">Ionian</div>
     </div>
     <div class="row" id="tensions-row">
-      <div class="col-5 chord-module-title">Tensions:</div>
-      <div class="col-2" id="tension-ninth">9</div>
-      <div class="col-2" id="tension-eleventh">11</div>
-      <div class="col-2" id="tension-thirteenth">13</div>
-      <div class="col-1"></div>
+      <div class="col-6 chord-module-title">Tensions:</div>
+      <div class="col-6 chord-module-content" id="tension-ninth">9</div>
+      <!-- div class="col-1" id="tension-eleventh">11</div>
+      <div class="col-1" id="tension-thirteenth">13</div>
+      <div class="col-3"></div -->
     </div>
   </div>
 </div>
