--- a/public/Styles/stylesheet.css
+++ b/public/Styles/stylesheet.css
@@ -1,20 +1,127 @@
-html{
+html {
   width:100vw;
   height: 100vh;
   user-select: none;
 }
 
-body {
-  font-size: 1em;
+@media (max-width: 575.98px) {
+  #top-module{
+    font-size: 18px;
+    margin: auto;
+    padding: 0.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-height: 40vh;
+  }
+
+  #bottom-module {
+    margin: auto;
+    text-align: center;
+    max-height: 60vh;
+    font-size:16px;
+  }
 }
 
+@media (min-width:575.99px) and (max-width: 767.98px) {
+  #top-module{
+    font-size: 14px;
+    margin: auto;
+    padding: 0.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-height: 40vh;
+
+  }
+  #bottom-module {
+    margin: auto;
+    text-align: center;
+    max-height: 60vh;
+    font-size:16px;
+  }
+}
+
+@media (min-width:767.99px) and (max-width: 991.98px) {
+  #top-module{
+    font-size: 16px;
+    margin: auto;
+    padding: 0.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-height: 40vh;
+  }
+  #bottom-module {
+    margin: auto;
+    text-align: center;
+    max-height: 60vh;
+    font-size:16px;
+  }
+}
+
+@media (min-width: 991.99px) and (max-width: 1199.98px) {
+  #top-module{
+    font-size: 16px;
+    margin: auto;
+    padding: 0.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-height: 40vh;
+  }
+  #bottom-module {
+    margin: auto;
+    text-align: center;
+    max-height: 60vh;
+    font-size:14px;
+  }
+}
+
+@media (min-width:1199.99px) and (max-width: 1399.98px) {
+  #top-module{
+    font-size: 14px;
+    margin: auto;
+    padding: 0.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-height: 40vh;
+  }
+  #bottom-module {
+    margin: auto;
+    text-align: center;
+    max-height: 60vh;
+    font-size:16px;
+  }
+}
+
+@media (min-width: 1399.99px) {
+  #top-module{
+    font-size: 20px;
+    margin: auto;
+    padding: 0.5rem;
+    text-align: center;
+    border-radius: 1rem;
+    max-height: 40vh;
+  }
+  #bottom-module {
+    margin: auto;
+    text-align: center;
+    max-height: 60vh;
+    font-size:16px;
+  }
+}
+
+body {
+  line-height: 1.2;
+}
+
+/*
+Parameters for the top half of the page
 #top-module{
   margin: auto;
-  padding: 0.5em;
+  padding: 0.5rem;
   text-align: center;
-  border-radius: 1em;
+  border-radius: 1rem;
   max-height: 40vh;
 }
+*/
 
 #mode-module{
   border-top-right-radius: inherit;
@@ -22,34 +129,72 @@ body {
 }
 
 #chord-module{
-  font-size: 0.8em;
+  text-align: left;
   border-bottom-right-radius: inherit;
   border-bottom-left-radius: inherit;
   /*visibility: collapse; /* Remove later. This is hidden just for demo purposes */
 }
 
-#bottom-module {
-  margin: auto;
-  text-align: center;
-  max-height: 60vh;
 
+/*
+Text fields from top module
+*/
+
+/* ID used for the mode name in the top module */
+#modename {
+
+  font-size: 2em;
+  font-weight: bold;
+  margin-top: 0rem;
 }
 
-#modename {
+/* ID used for the tagline in the top module */
+#tagline{
   font-size: 1.2em;
+}
+
+/* ID used for row containing the different notes of the mode */
+#notes-div {
+  font-size: 1.8em;
   font-weight: bold;
 }
-#tagline{
-  font-size: 0.6em;
+
+/* Left column of chord section of top module; contains title scale degree, tensions, etc. */
+.chord-module-title {
+  text-align: right;
+  font-size: 1.3em;
 }
+
+/* Right column */
+.chord-module-content {
+  font-size: 1.3em;
+}
+
+/* Seventh chord uses a serif font to help legibility of Roman numerals */
+#seventh-chord {
+  font-family:monospace;
+}
+
+pre {
+  font-family: inherit;
+  font-size: inherit;
+  overflow: hidden;
+  margin: auto;
+}
+
+/*
+Style for bottom half of page below
+*/
 
 /*
 Since the wheel's viewbox should be a perfect square,
 limiting the width to a percentage of the view height will also fix
 the height of the SVG
 */
+
+
 #wheel{
-  max-width:60vh;
+  max-height:60vh;
 }
 
 textPath {
@@ -58,11 +203,6 @@ textPath {
   startOffset:50%;
   stroke-width:0;
   fill:black;
-}
-
-#notes-div {
-  font-size: 1.5em;
-  font-weight: bold;
 }
 
 .modetext {
@@ -95,10 +235,6 @@ textPath {
   font-family: 'Noto Sans', sans-serif;
   stroke-width:0;
   fill:white;
-}
-
-.chord-module-title {
-  text-align: right;
 }
 
 .div-selected {
