--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include ("__header.ejs"); %>
 <%- include ("top-module.ejs"); %>
 <%- include ("chord-module.ejs"); %>
+<%- include ("help-module.ejs"); %>
 <%- include ("__footer.ejs"); %>
